(frontend) fix text visibility on active tree element

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,7 +9,7 @@
 
 @plugin "daisyui/theme" {
     name: "light";
-    --color-primary: #2a76b7;
+    --color-primary: oklch(0.55 0.12 248);
     --radius-box: var(--radius-3xl);
     --radius-field: var(--radius-xl);
 }
@@ -17,7 +17,7 @@
 @plugin "daisyui/theme" {
     name: "dark";
     --color-base-content: oklch(82% .02 264.4);
-    --color-primary: #235886;
+    --color-primary: oklch(0.43 0.12 248);
     --radius-box: var(--radius-3xl);
     --radius-field: var(--radius-xl);
 }
@@ -56,7 +56,7 @@
     }
 
     .tn-active {
-        @apply bg-primary;
+        @apply bg-primary dark:text-base-content text-base-300;
     }
 
     .split {
